[package]
authors = ["Mark Hakansson"]
edition = "2018"
readme = "README.md"
name = "nucleo-rtic-blinking-led"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.13"
cortex-m-rtic = "0.5.5"
cortex-m-semihosting = "0.3.5"
embedded-hal = "0.2"
nb = "0.1.2"
panic-halt = "0.2.0"
rtt-target = { version = "0.3.0", features = ["cortex-m"] }

[dependencies.stm32f4xx-hal]
version = "0.8"
features = ["rt", "stm32f401"] # replace the model of your microcontroller here

[features]
nightly = ["cortex-m/inline-asm"]

[[bin]]
name = "nucleo-rtic-blinking-led"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations
