[package]
authors = ["Mark Hakansson"]
edition = "2018"
readme = "README.md"
name = "nucleo-rtic-examples"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.1"
cortex-m-rt = "0.6.13"
cortex-m-rtic = { git = "https://github.com/rtic-rs/cortex-m-rtic.git" }
dwt-systick-monotonic = { git = "https://github.com/rtic-rs/dwt-systick-monotonic.git" }
embedded-hal = "0.2.4"
nb = "1.0.0"
panic-halt = "0.2.0"
rtt-target = { version = "0.3.0", features = ["cortex-m"] }

[dependencies.stm32f4xx-hal]
version = "0.8.3"
features = ["rt", "stm32f401"] # replace the model of your microcontroller here

[features]
nightly = ["cortex-m/inline-asm"]

[[bin]]
name = "nucleo-rtic-examples"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations
